Added files via upload

--- a/task/task_3/task_3.html
+++ b/task/task_3/task_3.html
@@ -19,13 +19,26 @@
     </div>
     <div class="container">
         <div class="case">
-            <p>
-                万清晨：营销总监，男，本科学历，市场营销专业。曾在学生会工作，获“三好学生”等多项荣誉，多次参加社会实践及创业实践活动，擅长制作营销策划，对市场定位及市场分析独有见解。</p> 
-            <p>王洪光：财务总监，女，本科学历，工商管理专业。共产党员，做事踏实积极，号召力强，信用度高。有一定财务分析及会计学、统计学知识，曾在校党站工作，有一定组织能力及自我管理能力。</p> 
-            <p>张宇东：人事总监兼宣传部长，男，本科学历，创业管理专业。曾多次参加企业实习，有一定社会实践经验。任学生会宣传部部长及腾讯职场精英发展协会副理事长，拥有一定的人脉资源及团队管理能力，善于与他人沟通协作，组织能力较强。具有丰富的活动策划经验、深厚的宣传功底、较广的宣传渠道以及熟练地计算机操作能力。主修创业管理专业，具备一定的创业管理知识技能。</p> 
-            <p>朱静：质检反馈部长、联络员，女，本科学历，经济学专业。有相当丰富的经济学知识，多次参加社会实践活动，善于分析经济动向，通过对顾客信息的整合能高效的确定公司发展方向，责任心强，亲和度高。</p> 
-            <p>方晴：公关部长，女，本科学历，教育管理学专业。英语功底深厚，并又多次翻译经验，善于与人沟通交流，写作能力强，曾参加报社与政府机构实习，有一定公关礼仪知识，敢于尝试，喜欢挑战，拥有丰富的演讲经验和活动组织经验，口才一流，辅修BEC专业。
-            </p>
+            <h2>团队介绍</h2>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
+            <p>有缘相聚，一拍即合。</p>
         </div>
     </div>
     <div class="clear"></div>
